# Linked-List-Rust

./: .gitignore  Cargo.toml  setup.ps1
bad_safe_doubly_linked_deque/: Cargo.toml
bad_safe_doubly_linked_deque/src/: lib.rs
bad_singly_linked_stack/: Cargo.toml
bad_singly_linked_stack/src/: first.rs  lib.rs  main.rs
bad_singly_linked_stack/tests/: Power Shell commands.txt  first_tests.rs
ok_singly_linked_stack/: Cargo.toml
ok_singly_linked_stack/src/: first.rs  lib.rs  second.rs
ok_singly_linked_stack/tests/: second_tests.rs
ok_unsafe_doubly_linked_deque/: Cargo.toml
ok_unsafe_doubly_linked_deque/src/: lib.rs
persistent_singly_linked_stack/: Cargo.toml
persistent_singly_linked_stack/src/: lib.rs
unsafe_singly_linked_queue/: Cargo.toml
unsafe_singly_linked_queue/src/: lib.rs
